--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+bcrypt==3.1.7
 cached-property==1.5.1
 certifi==2019.9.11
 cffi==1.12.3
@@ -11,11 +12,14 @@ exchangelib==2.0.1
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
+invoke==1.3.0
 isodate==0.6.0
 lxml==4.4.1
 ntlm-auth==1.4.0
+paramiko==2.6.0
 pycparser==2.19
 Pygments==2.4.2
+PyNaCl==1.3.0
 python-dateutil==2.8.0
 pytz==2019.2
 requests==2.22.0
