--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.6.0
 Django==2.2.5
 dnspython==1.16.0
 exchangelib==2.0.1
+Fabric3==1.14.post1
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
